--- a/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Collision Summary";
 }
-
 @inject SignInManager<IdentityUser> SignInManager
 @model CollisionsViewModel
 <!--Hero Section-->
@@ -15,13 +14,13 @@
     </div>
 </div>
 
-<br /><br />
+<br />
+<br />
 <div class='container-fluid no-padding mb40'>
     <div class='row no-margin'>
         <div class="col-3">
             <vc:counties></vc:counties>
         </div>
-      
         <div class='col-9'>
             <table class="table table-sm table-striped table-bordered">
                 <thead>
@@ -38,38 +37,38 @@
 
                     @foreach (var c in Model.Collisions)
                     {
-                    <tr>
-                        <td>@c.CrashDatetime</td>
-                        <td>@c.MainRoadName</td>
-                        <td>@c.City.CityName</td>
-                        <td>@c.County.CountyName</td>
-                        @if (c.CrashSeverityId == 5)
-                        {
-                            <td>Fatal</td>
-                        }
-                        @if (c.CrashSeverityId == 4)
-                        {
-                            <td>Suspected Serious Injury</td>
-                        }
-                        @if (c.CrashSeverityId == 3)
-                        {
-                            <td>Suspected Minor Injury</td>
-                        }
-                        @if (c.CrashSeverityId == 2)
-                        {
-                            <td>Possible Injury</td>
-                        }
-                        @if (c.CrashSeverityId == 1)
-                        {
-                            <td>No Injury</td>
-                        }
-                        <td><a class="btn btn-primary btn-sm" asp-controller="Home" asp-action="Details" asp-route-collisionid="@c.CrashId">Details</a></td>
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <td><a asp-controller="Account" asp-action="EditCollision" asp-route-collisionid="@c.CrashId" class="btn-sm btn-secondary">Edit</a></td>
-                            <td><a asp-controller="Account" asp-action="DeleteCollision" asp-route-collisionid="@c.CrashId" class="btn-sm btn-danger">Delete</a></td>
-                        }
-                    </tr> 
+                        <tr>
+                            <td>@c.CrashDatetime</td>
+                            <td>@c.MainRoadName</td>
+                            <td>@c.City.CityName</td>
+                            <td>@c.County.CountyName</td>
+                            @if (c.CrashSeverityId == 5)
+                            {
+                                <td>Fatal</td>
+                            }
+                            @if (c.CrashSeverityId == 4)
+                            {
+                                <td>Suspected Serious Injury</td>
+                            }
+                            @if (c.CrashSeverityId == 3)
+                            {
+                                <td>Suspected Minor Injury</td>
+                            }
+                            @if (c.CrashSeverityId == 2)
+                            {
+                                <td>Possible Injury</td>
+                            }
+                            @if (c.CrashSeverityId == 1)
+                            {
+                                <td>No Injury</td>
+                            }
+                            <td><a class="btn-primary btn-sm" asp-controller="Home" asp-action="Details" asp-route-collisionid="@c.CrashId">Details</a></td>
+                            @if (SignInManager.IsSignedIn(User))
+                            {
+                                <td><a asp-controller="Account" asp-action="EditCollision" asp-route-collisionid="@c.CrashId" class="btn-sm btn-secondary">Edit</a></td>
+                                <td><a asp-controller="Account" asp-action="DeleteCollision" asp-route-collisionid="@c.CrashId" class="btn-sm btn-danger">Delete</a></td>
+                            }
+                        </tr>
                     }
                 </tbody>
             </table>
