--- a/CollisionsDB/CollisionsDB/Views/Home/Calculator.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Calculator.cshtml
@@ -15,6 +15,8 @@
         </div>
     </div>
 </div>
+
+<!--Main Content-->
 <div class='container-fluid no-padding mb40'>
     <div class='row no-margin'>
         <div class='col-lg-8  mr-auto ml-auto'>
