--- a/CollisionsDB/CollisionsDB/Views/Shared/_CookieConsentPartial.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_CookieConsentPartial.cshtml
@@ -9,7 +9,7 @@
 @if (showBanner)
 {
 <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-    This website uses cookies to improve the user experience. We do not share your data with any third parties. <a asp-page="/Privacy">Learn More</a>.
+    This website uses cookies to improve the user experience. We do not share your data with any third parties. <a asp-controller="Home" asp-action="Privacy">Learn More</a>.
     <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
         <span aria-hidden="true">Accept</span>
     </button>
