--- a/CollisionsDB/CollisionsDB/Views/Account/DeleteCollision.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Account/DeleteCollision.cshtml
@@ -3,13 +3,14 @@
 }
 
 @model Collision
+    <div class="container delete">
+        <h1>Are you sure you want to the record for Crash ID @Model.CrashId?</h1>
+        <br />
+        <form method="post">
+            <button class="btn btn-danger btn-sm" type="submit">Delete Now</button>
+            <a asp-controller="Home" asp-action="Summary" class="btn btn-primary btn-sm">Cancel</a>
 
-<h1>Are you sure you want to the record for Crash ID @Model.CrashId?</h1>
-<br />
-<form method="post">
-    <button class="btn btn-danger btn-sm" type="submit">Delete Now</button>
-    <a asp-controller="Home" asp-action="Summary" class="btn btn-primary btn-sm">Cancel</a>
+            <input type="hidden" asp-for="CrashId" />
 
-    <input type="hidden" asp-for="CrashId" />
-
-</form>
+        </form>
+    </div>
