Made the generated heatmap resolution dynamic

--- a/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-lg-4 mb30">
             <div class="d-flex justify-content-center">
-                <a href="/Home/HeatMap">
+                <a href="/Home/HeatMap?width=400">
                     <img src="/Home/HeatMap" class="img-fluid mb20" />
                 </a>
             </div>
