--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -31,9 +31,21 @@
         <div id="preloader-inner"></div>
     </div>
 
+
+
     <!--Navigation Menu-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-transparent bg-faded nav-sticky nav-stick-top">
+        <!--Top Bar-->
+        <div class="top-bar clearfix dark">
+            <div class="container">
+                <div class="float-sm-right">
+                    <partial name="_LoginPartial" />
+                </div>
+            </div>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-stick-top">
+
+            <!--<nav class="navbar navbar-expand-lg navbar-light navbar-transparent bg-faded nav-sticky nav-stick-top">-->
             <div class="container">
 
                 <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Utah Collisions Analysis</a>
@@ -53,7 +65,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Calculator">Calculator</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <!--<partial name="_LoginPartial" />-->
                 </div>
             </div>
         </nav>
