Added feature importances to analytics page, and patched a glitch in the bootstrap CSS file

--- a/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
@@ -19,7 +19,7 @@
         <div class="col-lg-4 mb30">
             <div class="d-flex justify-content-center">
                 <a href="/Home/HeatMap?width=400">
-                    <img src="/Home/HeatMap" class="img-fluid mb20" />
+                    <img src="/Home/HeatMap?width=186" class="img-fluid mb20" />
                 </a>
             </div>
             <h4 class="text-uppercase">Severity Prediction Map</h4>
@@ -28,17 +28,17 @@
             </p>
         </div>
         <div class="col-lg-4 mb30">
-            <img src="~/images/loren-cutler-4_lfmkpRcZM-unsplash.jpg" class="img-fluid mb20" />
-            <h4 class="text-uppercase">Another Graphic Here</h4>
+            <img src="~/images/feature_importances.png" class="img-fluid mb20" />
+            <h4 class="text-uppercase">Feature Importances</h4>
             <p>
-                Maybe a chart of which features influence severity the most
+                These features are the best predictors of crash severity.
             </p>
         </div>
         <div class="col-lg-4 mb30">
-            <img src="~/images/computerpeople.jpg" class="img-fluid mb20" />
-            <h4 class="text-uppercase">Cool Statistic</h4>
+            <img src="~/images/loren-cutler-4_lfmkpRcZM-unsplash.jpg" class="img-fluid mb20" />
+            <h4 class="text-uppercase">Crashes This Year</h4>
             <p>
-                Another Statistic
+                Count of crashes by type (placeholder)
             </p>
         </div>
     </div>
