--- a/CollisionsDB/CollisionsDB/wwwroot/css/style.css
+++ b/CollisionsDB/CollisionsDB/wwwroot/css/style.css
@@ -986,7 +986,7 @@ Assan Header Style
   position: relative; }
 
 .navbar-light.bg-faded {
-  background: #fff;
+  background: #000c;
   border-bottom: 0px; }
 
 .navbar-light .navbar-nav .nav-link {
