--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 
     <!--Navigation Menu-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-transparent bg-faded nav-sticky nav-stick-top">
+        <nav class="navbar navbar-expand-lg navbar-light text-light navbar-transparent bg-faded nav-sticky nav-stick-top">
             <div class="container">
 
                 <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Utah Collisions Analysis</a>
@@ -48,6 +48,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Summary">Summary</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Analytics">Analytics</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Calculator">Calculator</a>
