--- a/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
@@ -36,10 +36,18 @@
         </div>
         <div class="col-lg-4 mb30">
             <img src="~/images/loren-cutler-4_lfmkpRcZM-unsplash.jpg" class="img-fluid mb20" />
-            <h4 class="text-uppercase">Crashes This Year</h4>
-            <p>
-                Count of crashes by type (placeholder)
-            </p>
+            <div>
+
+            </div>
+            <h4 class="text-uppercase">Crashes This Year - 2019</h4>
+            <ol>
+                @for (int i = 1; i <= 5; i++)
+                {
+                    <li>
+                        @ViewBag.CrashSeverities[i - 1].Description: @ViewBag.NumCrashes[i]
+                    </li>
+                }
+            </ol>
         </div>
     </div>
 </div>
